# http/event.go
@@ -1,10 +1,12 @@
 package http
 
 import (
+	"mime/multipart"
 	"net/http"
 
 	"github.com/JerryJeager/will-be-there-backend/service"
 	"github.com/JerryJeager/will-be-there-backend/service/event"
+	"github.com/JerryJeager/will-be-there-backend/utils"
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 )
@@ -54,7 +56,7 @@ func (o *EventController) CreateEvent(ctx *gin.Context) {
 	var Event service.Event
 
 	if err := ctx.ShouldBindJSON(&Event); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"message": "invalid format"})
+		ctx.JSON(http.StatusBadRequest, gin.H{"message": "invalid format", "error": err.Error()})
 		return
 	}
 
@@ -68,84 +70,39 @@ func (o *EventController) CreateEvent(ctx *gin.Context) {
 	ctx.JSON(http.StatusCreated, id)
 }
 
-func (o *EventController) CreateEventType(ctx *gin.Context) {
-	var eventType service.EventType
-
-	if err := ctx.ShouldBindJSON(&eventType); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"message": "invalid format"})
-		return
-	}
-
+func (o *EventController) UpdateImageurl(ctx *gin.Context) {
 	var pp EventIDPathParam
 
 	if err := ctx.ShouldBindUri(&pp); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"message": "id is of invalid format"})
-		return
-	}
-
-	id, err := o.serv.CreateEventType(ctx, uuid.MustParse(pp.EventID), &eventType)
-
-	if err != nil {
-		ctx.Status(http.StatusNotFound)
-		return
-	}
-
-	ctx.JSON(http.StatusCreated, id)
-}
-
-func (o *EventController) UpdateEventType(ctx *gin.Context) {
-	var EventPP EventIDPathParam
-
-	if err := ctx.ShouldBindUri(&EventPP); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"message": "event id is of invalid format"})
 		return
 	}
 
-	var eventTypeID EventTypeIDPathParam
+	filename, ok := ctx.Get("filePath")
+	if !ok {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "filename not found"})
+	}
 
-	if err := ctx.ShouldBindUri(&eventTypeID); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"message": "event type id is of invalid format"})
+	file, ok := ctx.Get("file")
+	if !ok {
+		ctx.JSON(http.StatusBadRequest, gin.H{"error": "file not found"})
 		return
 	}
 
-	var eventType service.EventType
-
-	if err := ctx.ShouldBindJSON(&eventType); err != nil {
-		ctx.Status(http.StatusBadRequest)
-		return
-	}
-
-	id, err := o.serv.UpdateEventType(ctx, uuid.MustParse(EventPP.EventID), uuid.MustParse(eventTypeID.EventTypeID), &eventType)
+	imageUrl, err := utils.UploadToCloudinary(file.(multipart.File), filename.(string))
 
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, err.Error())
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
 
-	ctx.JSON(http.StatusOK, id)
-}
+	err = o.serv.UpdateImageUrl(ctx, uuid.MustParse(pp.EventID), imageUrl)
 
-func (o *EventController) DeleteEventType(ctx *gin.Context) {
-	var EventPP EventIDPathParam
-
-	if err := ctx.ShouldBindUri(&EventPP); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"message": "event id is of invalid format"})
+	if err != nil{
+		ctx.JSON(http.StatusNotFound, err.Error())
 		return
 	}
 
-	var eventTypeID EventTypeIDPathParam
+	ctx.JSON(http.StatusOK, imageUrl)
 
-	if err := ctx.ShouldBindUri(&eventTypeID); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"message": "event type id is of invalid format"})
-		return
-	}
-
-	err := o.serv.DeleteEventType(ctx, uuid.MustParse(EventPP.EventID), uuid.MustParse(eventTypeID.EventTypeID))
-
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	ctx.Status(http.StatusNoContent)
 }
